chore: fix typo

--- a/20230803103717-haskell.org
+++ b/20230803103717-haskell.org
@@ -10,11 +10,11 @@
 * 编程环境
 ** GHC
 主要由三部分组成：
-- ghc
+- =ghc=
   生成本地原生代码的编译器
-- ghci
+- =ghci=
   交互式的解释器和调试器
-- runghc
+- =runghc=
   以脚本方式运行程序
 
 * 学习笔记
